--- a/task-b/app/Dockerfile
+++ b/task-b/app/Dockerfile
@@ -1,37 +1,32 @@
-# syntax=docker/dockerfile:1.7
-
 # ---- Build stage ----
-FROM node:20-alpine AS build
+FROM node:23-alpine3.21 AS build
+
 WORKDIR /app
 
-# Install only production deps (reproducible)
+# Install deps first (better caching)
 COPY package*.json ./
 RUN npm ci --omit=dev
 
 # Copy source
 COPY . .
 
-# ---- Runtime stage (minimal) ----
-FROM alpine:3.23 AS runtime
-WORKDIR /app
+# ---- Runtime stage ----
+FROM node:23-alpine3.21 AS runtime
+
 ENV NODE_ENV=production
+WORKDIR /app
 
-# Install only what's needed to run node (no npm)
-RUN apk add --no-cache libstdc++ ca-certificates \
-  && addgroup -S nodejs \
-  && adduser -S nodeuser -G nodejs
+# Create a non-root user (standard hardening)
+RUN addgroup -S nodejs && adduser -S nodeuser -G nodejs
 
-# Copy Node runtime binaries + libs from build image
-COPY --from=build /usr/local/bin/node /usr/local/bin/node
-COPY --from=build /usr/local/lib/node_modules /usr/local/lib/node_modules
-
-# Make node available without pulling npm tooling into PATH
-RUN ln -s /usr/local/lib/node_modules /usr/local/lib/node_modules \
-  && ln -s /usr/local/bin/node /usr/local/bin/node
-
-# Copy app + installed node_modules from build stage
+# Copy only what we need from build stage
 COPY --from=build /app /app
 
+# Drop privileges
 USER nodeuser
+
+# App listens on 3000 (matches your index.js default)
 EXPOSE 3000
+
+# Safer default for containers
 CMD ["node", "index.js"]
